# puml_watch

./: README.md  pyproject.toml
example/: a.puml
src/puml_watch/: __init__.py
src/puml_watch_plantuml/: __init__.py
