[project]
name = "puml-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchfiles>=0.24.0",
]

[project.scripts]
puml_watch = "puml_watch:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
